staging/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: green
  template:
    metadata:
      labels:
        app: backend
        version: green
    spec:
      containers:
      - name: backend
        image: agranov9/backend-todo:1.0.60
        ports:
        - containerPort: 8080
