staging/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
    version: green
  ports:
  - port: 8080
    targetPort: 8080
