staging/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend
    version: green
  ports:
  - nodePort: 31234
    port: 5173
    targetPort: 5173
    protocol: TCP
